--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     <script type="module" src="./App.jsx"></script>
     <!-- type="module" for Vite to know that we use ES6 modules, not commonJS -->
 
-    <!-- Moved to App.js -->
+    <!-- Moved to OldApp.jsx and then to App.jsx -->
     <!-- <script>
     const App = () => {
-      return React.cr eateElement( // we are going to use JSX instead of this
+      return React.createElement( // we are going to use JSX instead of this
         'div', // we could give it either string or a component
         { id: 'something-important' },
         React.createElement('h1', {}, 'Adopt Me!') //! second argument is the props, third argument is the children
